@@ -1,5 +1,8 @@
 2005-03-22  Edward Hervey  <bilboed@bilboed.com>
 
+	* configure.ac, Makefile.am, docs/libs/Makefile.am, docs/Makefile.am: 
+	Added gtk-doc API documentation skeleton
+
 	* gnl/gnl*.[ch]: updated all class files for correct *.h dependency.
 
 	* test/sourcetest1.c, test/sourcetest2.c, test/sourcetest3.c, test/sourcetest4.c :
